[package]
name = "raypump-copytrading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
chrono = "0.4.38"
lazy_static = "1.5.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-stream = "0.1.11"
solana-sdk = "~2.1.1"
solana-client = "~2.1.1"
solana-account-decoder = "~2.1.1"
solana-transaction-status = "~2.1.1"
yellowstone-grpc-client = "4.1.0"
yellowstone-grpc-proto = "4.1.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token-client = "0.13.0"
anyhow = "1.0.62"
serde = "1.0.145"
serde_json = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
bytemuck = "1.21.0"
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
indicatif = "0.17.8"
rand = "0.8.5"
tracing = "0.1.40"
futures-util = "0.3.30"
borsh = { version = "1.5.3" }
borsh-derive = "1.5.3"
url = "2.3.1"
base64 = "0.13"
bincode = "1.3.3"
colored = "3.0.0"
bs64 = "0.1.2"
maplit = "1.0.2"
bs58 = "0.4"
tokio-js-set-interval = "1.3.0"
jito-json-rpc-client = { git = "https://github.com/jwest951227/jito-block-engine-json-rpc-client.git", branch="v2.1.1", package = "jito-block-engine-json-rpc-client" }
